--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 	<body class="home page-template-default page page-id-11 et-tb-has-template et-tb-has-footer et-tb-footer-disabled et_button_no_icon et_pb_button_helper_class et_fixed_nav et_hide_nav et_hide_primary_logo et_hide_fixed_logo et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_header_style_centered et_pb_svg_logo et_cover_background et_pb_gutter osx et_pb_gutters3 et_pb_pagebuilder_layout et_no_sidebar et_divi_theme et-db">
 		<div id="page-container">
 			<div id="et-boc" class="et-boc">
+				<!--
 				<header id="main-header" data-height-onload="66">
 					<div class="container clearfix et_menu_container">
 						<div class="logo_container">
@@ -174,26 +175,24 @@
 							<nav id="top-menu-nav">
 								<ul id="top-menu" class="nav et_disable_top_tier">
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-63"><a href="#">Bistro by the Tracks</a></li>
-									<!--<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-58"><a href="#au-menu">AU MENU</a></li>-->
+									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-58"><a href="#au-menu">AU MENU</a></li>
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-59"><a href="#contact">CONTACT</a></li>
-									<!--
+									
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-60"><a href="#equipe">L&rsquo;ÉQUIPE</a></li>
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-160"><a href="https://ib.guestonline.fr/instabook/bookings/CPzQLDD">RÉSERVER</a></li>
 									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-305"><a href="#bon-cadeau">CHÈQUE-CADEAU</a></li>
-									-->
 								</ul>
 							</nav>
-							<!--
 							<div id="et_mobile_nav_menu">
 								<div class="mobile_nav closed">
 									<span class="select_page">Select a page</span>
 									<span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
 								</div>
 							</div>
-						-->
-						</div> <!-- #et-top-navigation -->
-					</div> <!-- .container -->
-				</header> <!-- #main-header -->
+						</div>#et-top-navigation
+					</div> 
+				</header> 
+			-->
 			<div id="et-main-area">
 				<div id="main-content">
 					<article id="post-11" class="post-11 page type-page status-publish hentry">	
