Change daily hours text

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 															<b><a href="mailto:contact@bistrobythetracks.com">contact@bistrobythetracks.com</a></b><br/>
 															<b><a href="tel:+1-865-558-9500">865-558-9500</a></b>
 														</p>
-														<p>Monday - Thursday<br />5pm - 9pm<br />Friday - Saturday<br />5pm - 10pm<br />Bar / Lounge opens at 4pm<br />limited snacks available<br />Closed on Sundays</p>
+														<p>Monday - Thursday<br />5pm - 9pm<br />Friday - Saturday<br />5pm - 10pm<br />Bar / Lounge opens at 4pm<br />Closed on Sundays</p>
 													</div>
 												</div>
 												<ul class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_0 clearfix  et_pb_bg_layout_light">
