--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 	<!-- Start of Body Section -->
 	<body class="home page-template-default page page-id-11 et-tb-has-template et-tb-has-footer et-tb-footer-disabled et_button_no_icon et_pb_button_helper_class et_fixed_nav et_hide_nav et_hide_primary_logo et_hide_fixed_logo et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_header_style_centered et_pb_svg_logo et_cover_background et_pb_gutter osx et_pb_gutters3 et_pb_pagebuilder_layout et_no_sidebar et_divi_theme et-db">
-		<div id="page-container">
+		<div><!-- id="page-container">-->
 			<div id="et-boc" class="et-boc">
 				<!--
 				<header id="main-header" data-height-onload="66">
