--- a/index.html
+++ b/index.html
@@ -163,37 +163,6 @@
 	<body class="home page-template-default page page-id-11 et-tb-has-template et-tb-has-footer et-tb-footer-disabled et_button_no_icon et_pb_button_helper_class et_fixed_nav et_hide_nav et_hide_primary_logo et_hide_fixed_logo et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_header_style_centered et_pb_svg_logo et_cover_background et_pb_gutter osx et_pb_gutters3 et_pb_pagebuilder_layout et_no_sidebar et_divi_theme et-db">
 		<div><!-- id="page-container">-->
 			<div id="et-boc" class="et-boc">
-				<!--
-				<header id="main-header" data-height-onload="66">
-					<div class="container clearfix et_menu_container">
-						<div class="logo_container">
-							<span class="logo_helper"></span>
-							<a href="#">
-								<img src="images/bistro-white-logo.png" width="0" height="0" alt="Bistro by the Tracks" id="logo" data-height-percentage="54" />
-							</a>
-						</div>
-						<div id="et-top-navigation" data-height="66" data-fixed-height="160">
-							<nav id="top-menu-nav">
-								<ul id="top-menu" class="nav et_disable_top_tier">
-									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-63"><a href="#">Bistro by the Tracks</a></li>
-									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-58"><a href="#au-menu">AU MENU</a></li>
-									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-59"><a href="#contact">CONTACT</a></li>
-									
-									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-60"><a href="#equipe">L&rsquo;ÉQUIPE</a></li>
-									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-160"><a href="https://ib.guestonline.fr/instabook/bookings/CPzQLDD">RÉSERVER</a></li>
-									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-305"><a href="#bon-cadeau">CHÈQUE-CADEAU</a></li>
-								</ul>
-							</nav>
-							<div id="et_mobile_nav_menu">
-								<div class="mobile_nav closed">
-									<span class="select_page">Select a page</span>
-									<span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
-								</div>
-							</div>
-						</div>#et-top-navigation
-					</div> 
-				</header> 
-			-->
 			<div id="et-main-area">
 				<div id="main-content">
 					<article id="post-11" class="post-11 page type-page status-publish hentry">	
@@ -215,16 +184,8 @@
 												<div class="et_pb_module et_pb_text et_pb_text_0  et_pb_text_align_center et_pb_bg_layout_light">
 													<div class="et_pb_text_inner">
 														<h3>
-															<!--
-															<a href="#chez-loustic">Chez loustic</a> &nbsp; &nbsp; &nbsp; 
-															<a href="#au-menu">Au menu</a> &nbsp; &nbsp; &nbsp; 
-															-->
 															<a href="#bearden">Bearden</a> &nbsp; &nbsp; &nbsp; 
 															<a href="#central">N Central</a>
-															<!--
-															<a href="#equipe">L&rsquo;équipe</a> &nbsp; &nbsp; &nbsp; 
-															<a href="#bon-cadeau">chèque-cadeau</a>
-															-->
 														</h3>
 													</div>
 												</div>
@@ -234,29 +195,12 @@
 											<div class="et_pb_column et_pb_column_4_4 et_pb_column_2  et_pb_css_mix_blend_mode_passthrough et-last-child">
 												<div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
 													<div class="et_pb_text_inner">
-														<!--
-														<h3><a href="#chez-loustic">Chez loustic</a></h3>
-														<h3><a href="#au-menu">Au menu</a></h3>
-														-->
 														<h3><a href="#bearden">Bearden</a> &nbsp; &nbsp; &nbsp;
 														<a href="#central">N Central</a></h3>
-														<!--
-														<h3><a href="#equipe">L&rsquo;équipe</a></h3>
-														<h3><a href="#bon-cadeau">chèque-cadeau</a></h3>
-														-->
 													</div>
 												</div>
 											</div>
 										</div>
-										<!--
-										<div class="et_pb_row et_pb_row_3">
-											<div class="et_pb_column et_pb_column_4_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough et-last-child">
-												<div class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_center et_pb_module ">
-													<a class="et_pb_button et_pb_button_0 et_pb_bg_layout_light" href="https://resy.com/cities/knx/bistro-by-the-tracks" id="resyButton-E5Y5oH9p06r-TOupS1998" target="_blank">RESERVATIONS</a>
-												</div>
-											</div>	
-										</div>
-									-->
 									</div>
 									<!-- Bearden Section-->
 									<div id="bearden" class="et_pb_section et_pb_section_3 et_section_regular" >
@@ -274,22 +218,24 @@
 														<p><a class="et_pb_button et_pb_button_1 et_pb_bg_layout_light" href="https://resy.com/cities/knx/bistro-by-the-tracks" id="resyButton-E5Y5oH9p06r-TOupS1998" target="_blank">RESERVATIONS</a></p>
 													</div>
 												</div>
+												<!--
 												<ul class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_0 clearfix  et_pb_bg_layout_light">
 													<li class='et_pb_social_media_follow_network_0 et_pb_social_icon et_pb_social_network_link  et-social-facebook'>
 														<i class="fa fa-2x fa-facebook-square">
-															<a href='https://www.facebook.com/Chez-Loustic-107051558807715' title='Follow Us On Facebook' target="_blank">
+															<a href='https://www.facebook.com/' title='Follow Us On Facebook' target="_blank">
 																<span class='et_pb_social_media_follow_network_name' aria-hidden='true'>Follow</span>
 															</a>
 														</i>
 													</li>
 													<li class='et_pb_social_media_follow_network_1 et_pb_social_icon et_pb_social_network_link  et-social-instagram'>
 														<i class="fa fa-2x fa-instagram">
-															<a href='https://www.instagram.com/chez_loustic' title='Follow Us On Instagram' target="_blank">
+															<a href='https://www.instagram.com/bistro_bythetracks' title='Follow Us On Instagram' target="_blank">
 																<span class='et_pb_social_media_follow_network_name' aria-hidden='true'>Follow</span>
 															</a>
 														</i>
 													</li>
 												</ul>
+												-->
 											</div>
 											<div class="et_pb_column et_pb_column_2_3 et_pb_column_9  et_pb_css_mix_blend_mode_passthrough et-last-child">
 												<div class="et_pb_module dsm_embed_google_map dsm_embed_google_map_0">
@@ -313,26 +259,28 @@
 															<b><a href="mailto:contact@bistrobythetracks.com">contact@bistrobythetracks.com</a></b><br/>
 															<b><a href="tel:+1-865-247-4999">865-558-9500</a></b>
 														</p>
-														<p>Monday - Thursday<br />5pm - 9pm<br />Friday - Saturday<br />5pm - 10pm<br />Bar / Lounge opens at 4pm<br />Closed on Sundays</p>
-														<p><a class="et_pb_button et_pb_button_1 et_pb_bg_layout_light" href="https://resy.com/cities/knx/bistro-by-the-tracks" id="resyButton-E5Y5oH9p06r-TOupS1998" target="_blank">RESERVATIONS</a></p>
+														<p>Monday - Thursday<br />5pm - 9pm<br />Friday - Saturday<br />5pm - 10pm<br />Closed on Sundays</p>
+														<p><a class="et_pb_button et_pb_button_1 et_pb_bg_layout_light" href="https://www.opentable.com/bistro-by-the-tracks" id="opTableButton" target="_blank">RESERVATIONS</a></p>
 													</div>
 												</div>
+												<!--
 												<ul class="et_pb_module et_pb_social_media_follow et_pb_social_media_follow_0 clearfix  et_pb_bg_layout_light">
 													<li class='et_pb_social_media_follow_network_0 et_pb_social_icon et_pb_social_network_link  et-social-facebook'>
 														<i class="fa fa-2x fa-facebook-square">
-															<a href='https://www.facebook.com/Chez-Loustic-107051558807715' title='Follow Us On Facebook' target="_blank">
+															<a href='https://www.facebook.com/' title='Follow Us On Facebook' target="_blank">
 																<span class='et_pb_social_media_follow_network_name' aria-hidden='true'>Follow</span>
 															</a>
 														</i>
 													</li>
 													<li class='et_pb_social_media_follow_network_1 et_pb_social_icon et_pb_social_network_link  et-social-instagram'>
 														<i class="fa fa-2x fa-instagram">
-															<a href='https://www.instagram.com/chez_loustic' title='Follow Us On Instagram' target="_blank">
+															<a href='https://www.instagram.com/bistro_bythetracks' title='Follow Us On Instagram' target="_blank">
 																<span class='et_pb_social_media_follow_network_name' aria-hidden='true'>Follow</span>
 															</a>
 														</i>
 													</li>
 												</ul>
+												-->
 											</div>
 											<div class="et_pb_column et_pb_column_2_3 et_pb_column_9  et_pb_css_mix_blend_mode_passthrough et-last-child">
 												<div class="et_pb_module dsm_embed_google_map dsm_embed_google_map_0">
